--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -39,9 +39,31 @@ body {
 .restaurants-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .form-container {
   justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+.add-container {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+.home-container {
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.random-btn {
+  width: 200px;
+  margin-bottom: 75px;
+}
+.home-container h1 {
+  margin: 100px 0px 50px 0px;
 }
 
 @media (max-width: 768px) {
