--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -59,11 +59,64 @@ body {
   flex-direction: column;
 }
 .random-btn {
-  width: 200px;
-  margin-bottom: 75px;
+  width: 75px;
 }
 .home-container h1 {
   margin: 100px 0px 50px 0px;
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content ul:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:active .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown 
+content is shown */
+/* .dropdown:hover .dropbtn {
+  background-color: #0a065d;
+} */
+
+.drop-menus {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.btn-container {
+  display: flex;
+}
+.random-restaurant {
+  padding-top: 100px;
+}
+.btn-list {
+  list-style: none;
 }
 
 @media (max-width: 768px) {
