--- a/ClientApp/src/index.css
+++ b/ClientApp/src/index.css
@@ -44,6 +44,7 @@ body {
 .form-container {
   justify-content: center;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
 }
 .add-container {
